Update to HTML and CSS

--- a/highscores.html
+++ b/highscores.html
@@ -4,16 +4,18 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>High Score</title>\
         <link rel="stylesheet" href="./assets/css/style.css">
+        <link rel="stylesheet" href="highscores.css">
     </head>
     <body>
         <div class="container">
-            <div id="home" class="flex-column flex-center">
-                <h1>Start Quiz</h1>
-                <a href="quiz.html" class="btn">Play</a>
-                <a href="highscores.html" id="highscore-btn" class="btn">High Scores</a>
+            <div id="highScores" class="flex-center flex-column">
+                <h1 id="finalScore">Leaderboard</h1>
+                <ul id="highScoresList"></ul>
+                <a href="/" class="btn">Go Home</a>
             </div>
         </div>
+        
     </body>
 </html>
