--- a/end.html
+++ b/end.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>DBZ Ultimate Challenge End Page</title>
         <link rel="stylesheet" href="./assets/css/style.css">
     </head>
     <body>
@@ -12,10 +12,12 @@
                 <h1 id="finalScore">0</h1>
                 <form class="end-form-container">
                     <h2 id="end-text">Enter your name below to save your score!</h2>
-                    <input type="text" name="name" id="username" placeholder="Enter your name">
-                    <button class="btn" id="saveScorebtn" type="submit" onClick="saveHighScore">Save</button>
+                    <input type="text" name="name" id="username"
+                    placeholder="Enter your name">
+                    <button class="btn" id="saveScorebtn" type="submit"
+                    onClick="saveHighScore">Save</button>
                 </form>
-                <a href="/quiz.html" class="btn">Try again</a>
+                <a href="/game.html" class="btn">Play Again</a>
                 <a href="/highscores.html" class="btn">Leaderboard</a>
             </div>
         </div>
