--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>DBZ Challenge Quiz</title>
         <link rel="stylesheet" href="./assets/css/style.css">
     </head>
     <body>
         <div class="container">
-            <div id="home" class="flex-column flex-center">
-                <h1>Start Quiz</h1>
-                <a href="quiz.html" class="btn">Play</a>
-                <a href="highscores.html" id="highscore-btn" class="btn">High Scores</a>
-            </div>
+        <div id="home" class="flex-column flex-center">
+        <h1>Ready to Begin the Utimate DBZ Challenge?!</h1>
+        <a href="game.html" class="btn">Start</a>
+        <a href="highscores.html" id="highscore-btn" 
+        class="btn">High Scores</a>
+        </div>
         </div>
     </body>
 </html>
+    
