DBZ Code Quiz Challenge Update

--- a/endofquiz.html
+++ b/endofquiz.html
@@ -17,7 +17,7 @@
                     <button class="btn" id="saveScorebtn" type="submit"
                     onClick="saveHighScore">Save</button>
                 </form>
-                <a href="/game.html" class="btn">Play Again</a>
+                <a href="/dbzchallenge.html" class="btn">Play Again</a>
                 <a href="/highscores.html" class="btn">Leaderboard</a>
             </div>
         </div>
