--- a/dbzchallenge.html
+++ b/dbzchallenge.html
@@ -5,28 +5,28 @@
         <meta charset="UTF-8">
         <title>Ultimate Dragon Ball Z Challenge</title>
         <link rel="stylesheet" href="./assets/css/style.css">
-        <link rel="stylesheet" href="./assets/css/game.css">
+        <link rel="stylesheet" href="./assets/css/dbzchallenge.css">
     </head>
     <body>
         <div class="container">
         <div id="game" class="justify-center flex-column">
             <div id="hud">
-              <div class="hud-item">
-                  <p id="progressText" class="hud-prefix">
-                      Question
-                  </p>
-                  <div id="progressBar">
-                      <div id="progressBarFull"></div>
-                  </div>
-              </div>  
-              <div class="hud-item">
-                  <p class="hud-prefix">
-                      Score
-                  </p>
-                  <h1 class="hud-main-text" id="score">
-                      0
-                  </h1>
-              </div>
+                <div class="hud-item">
+                    <p id="progressText" class="hud-prefix">
+                        Question
+                    </p>
+                    <div id="progressBar">
+                        <div id="progressBarFull"></div>
+                    </div>
+                </div>  
+                <div class="hud-item">
+                    <p class="hud-prefix">
+                        Score
+                    </p>
+                    <h1 class="hud-main-text" id="score">
+                        0
+                    </h1>
+                </div>
             </div>
             <h1 id="question">This is a question</h1>
             <div class="choice-container">
