--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="container">
         <div id="home" class="flex-column flex-center">
         <h1>Ready to Begin the Utimate DBZ Challenge?!</h1>
-        <a href="game.html" class="btn">Start</a>
+        <a href="dbzchallenge.html" class="btn">Start</a>
         <a href="highscores.html" id="highscore-btn" 
         class="btn">High Scores</a>
         </div>
